samples/_failures_safe/1761144830_e7004d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a152d081.c: In function ‘main’:
./samples/SAFE/__tmp_a152d081.c:154:13: error: expected declaration or statement at end of input
  154 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_a152d081.c:154:13: error: expected declaration or statement at end of input
